--- a/Resources/help.htm
+++ b/Resources/help.htm
@@ -31,15 +31,15 @@
         <h2>About</h2>
         <h3>Open Cipher</h3>
         <p>Open Cipher is a free encryption software based on <a href="http://www.openssl.org/">
-            OpenSSL</a>. Developped using .NET and C# it is an 
+            OpenSSL</a>. Developed using .NET and C# it is an 
             interface between the user and OpenSSL security features. OpenSSL is a widely 
             used and trusted open source security tool.</p>
 	    <h3>Author</h3>
-        <p>Open Cipher has been developped by Laurent Dubois IT.</p>
+        <p>Open Cipher has been developed by My name is Laurent Dubois, cryptography enthusiast.</p>
         
 	    <h2>Installation</h2>
-	    <h3>Get the lastest version</h3>
-        <p>The lastest version of Open Ciphercan be downloaded at : http://opencipher.net/</p>
+	    <h3>Get the last version</h3>
+        <p>The last version of Open Cipher can be downloaded at : http://opencipher.net/</p>
 	    <h3>Installation</h3>
         <p>To install Open Cipher, download the lastest version of the installer, run it on your 
             computer using administrator rights, then follow the instructions.</p>
